refactor: (Product)entity & repository구현 및 코드수정 + UserDTO추가