@@ -1,39 +1,50 @@
 package gift.product;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.crossstore.ChangeSetPersister.NotFoundException;
 import org.springframework.stereotype.Service;
 
 @Service
 public class ProductService {
+    private final ProductRepository productRepository;
 
-    private final ProductDao productDao;
-
-    @Autowired
-    public ProductService(ProductDao productDao) {
-        this.productDao = productDao;
+    public ProductService(ProductRepository productRepository) {
+        this.productRepository = productRepository;
     }
 
     public List<ProductDTO> getAllProducts() {
-        return productDao.findAll().stream()
+        return productRepository.findAll().stream()
             .map(ProductDTO::fromProduct)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    public ProductDTO getProductById(Long id) {
-        return ProductDTO.fromProduct(productDao.selectProduct(id));
+    public ProductDTO getProductById(long id) throws NotFoundException {
+        Product product = productRepository.findById(id).orElseThrow(NotFoundException::new);
+        return ProductDTO.fromProduct(product);
+    }
+
+    public boolean existsByName(String name){
+        return productRepository.existsByName(name);
     }
 
     public void addProduct(ProductDTO product) {
-        productDao.insertProduct(product.toProduct());
+        if(productRepository.existsByName(product.getName())){
+            throw new IllegalArgumentException("존재하는 이름입니다,");
+        }
+        productRepository.save(product.toProduct());
     }
 
-    public void updateProduct(ProductDTO product) {
-        productDao.updateProduct(product.toProduct());
+    public void updateProduct(ProductDTO productDTO) throws NotFoundException {
+        Product product = productRepository.findById(productDTO.getId()).orElseThrow(NotFoundException::new);
+        if(productRepository.existsByName(product.getName())){
+            throw new IllegalArgumentException("존재하는 이름입니다.");
+        }
+        product.update(productDTO.getPrice(),productDTO.getName(),productDTO.getImageUrl());
+        productRepository.save(product);
     }
 
-    public void deleteProduct(Long id) {
-        productDao.deleteProduct(id);
+    public void deleteProduct(long id) throws NotFoundException {
+        productRepository.findById(id).orElseThrow(NotFoundException::new);
+        productRepository.deleteById(id);
     }
 }
